crates/sui-graphql-macros/tests/compile/path_type_mismatch.stderr
error: path 'items[].name' has 1 array segment(s) but type has 0 Vec wrapper(s)
 --> tests/compile/path_type_mismatch.rs:8:5
  |
8 |     names: String,
  |     ^^^^^

error: path 'chainIdentifier' has 0 array segment(s) but type has 1 Vec wrapper(s)
  --> tests/compile/path_type_mismatch.rs:16:5
   |
16 |     ids: Vec<String>,
   |     ^^^
